bug修改